--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/temperatures?useUnicode=true&characterEncoding=utf8
+url=jdbc:mysql://localhost:3306/port?useUnicode=true&characterEncoding=utf8
 driver=com.mysql.jdbc.Driver
 username=root
 password=123456
